@@ -2,34 +2,86 @@ ext {
     // See instructions for updating jdk8.jar at
     // https://github.com/typetools/annotated-libraries/blob/master/README.md .
     // Set jdkShaHash to 'local' to use a locally-built version of jdk8.jar .
-    jdkShaHash = 'ecafdf9b336fdbf74b92ee5f01fdc1537bbc2fa7'
+    jdkShaHash = 'c41c8ace5550c03992c0691019a2ce470458c47f'
     if (rootProject.hasProperty("useLocalJdk")) {
         jdkShaHash = 'local'
     }
+
+    jdkHome = '../../jdk'
 }
 sourceSets {
     main {
         resources {
             // Stub files, message.properties, etc.
-            srcDirs = ['src/main/java']
-            exclude '**/*.java'
+            srcDirs += ['src/main/java', "${buildDir}/jdk"]
         }
     }
     testannotations
 }
 
 dependencies {
-    compile project(':framework')
-    compile project(':dataflow')
-    compile project(':javacutil')
-    compile project(':checker-qual')
+    implementation project(':framework')
+    implementation project(':dataflow')
+    implementation project(':javacutil')
+    implementation project(':checker-qual')
+    // As of 2019/12/16, the version of reflection-util in the Annotation
+    // File Utilities takes priority over this version, in the fat jar
+    // file. :-( So update it and re-build it locally when updating this.
+    implementation 'org.plumelib:reflection-util:0.2.0'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile project(':framework-test')
-    testCompile sourceSets.testannotations.output
+    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation project(':framework-test')
+    testImplementation sourceSets.testannotations.output
 
-    testannotationsCompile project(':checker-qual')
+    testannotationsImplementation project(':checker-qual')
 }
+
+task cloneTypetoolsJdk() {
+    description 'Obtain or update the jdk'
+    if (file(jdkHome).exists()) {
+        exec {
+            workingDir jdkHome
+            executable 'git'
+            args = ['pull', '-q']
+            ignoreExitValue = true
+        }
+    } else {
+        exec {
+            workingDir "${jdkHome}/../"
+            executable 'git'
+            args = ['clone', '-q', 'https://github.com/typetools/jdk.git', 'jdk']
+        }
+    }
+}
+
+task copyJdk11Files(dependsOn: cloneTypetoolsJdk, group: 'Build') {
+    description "Copy annotated jdk 11 files to ${buildDir}/jdk/jdk11/"
+    doLast {
+        FileTree tree = fileTree(dir: "${jdkHome}/src/")
+        SortedSet<String> annotatedForFiles = new TreeSet<>();
+        tree.visit { FileVisitDetails fvd ->
+            if (!fvd.file.isDirectory() && fvd.file.name.matches(".*\\.java")) {
+                fvd.getFile().readLines().any { line ->
+                    if (line.contains("@AnnotatedFor") || line.contains("org.checkerframework")) {
+                        annotatedForFiles.add(fvd.file.absolutePath)
+                        return true;
+                    }
+                }
+            }
+        }
+        String absolutejdkHome = file(jdkHome).absolutePath
+        int jdkDirStringSize = absolutejdkHome.size()
+        copy {
+            from(jdkHome)
+            into("${buildDir}/jdk/jdk11/")
+            for (String filename : annotatedForFiles) {
+                include filename.substring(jdkDirStringSize)
+            }
+        }
+    }
+}
+
+processResources.dependsOn(copyJdk11Files)
 
 jar {
     manifest {
@@ -111,6 +163,13 @@ task buildJdk(group: 'Build', dependsOn: copyJarsOtherThanJdk8ToDist) {
     }
 }
 
+task cleanJdk(type: Exec){
+    description 'Runs \'make clean\' in checker/jdk directory.'
+    workingDir "${projectDir}/jdk"
+    executable 'make'
+    args = ["clean"]
+}
+
 task updateJdk() {
     description 'Downloads or builds jdk8.jar and copies into checker/dist'
     if (jdkShaHash.is('local')) {
@@ -136,6 +195,23 @@ task updateJdk() {
     }
 }
 
+task printJdkJarManifest(type: Copy) {
+    description 'Outputs the manifest file for checker/dist/jdk8.jar'
+    outputs.upToDateWhen { false }
+
+    from(zipTree('dist/jdk8.jar')) {
+        include "META-INF/MANIFEST.MF"
+    }
+
+    String tmpDir = "${buildDir}/tmpJDKManifest"
+    into tmpDir
+    doLast {
+        println(new File(tmpDir, 'META-INF/MANIFEST.MF').text)
+        delete tmpDir
+    }
+
+}
+
 task copyJarsToDist(dependsOn: shadowJar, group: 'Build') {
     description 'Builds or downloads jars required by CheckerMain and puts them in checker/dist.'
     dependsOn project(':checker-qual').tasks.jar
@@ -150,18 +226,39 @@ task printPlumeUtilJarPath {
     doFirst { println project.configurations.compile.find { it.name.startsWith("plume-util") } }
 }
 
+task allSourcesJar(type: Jar) {
+    description 'Creates a sources jar that includes sources for all Checker Framework classes in checker.jar'
+    destinationDirectory = file("${projectDir}/dist")
+    archiveFileName = "checker-source.jar"
+    from (sourceSets.main.java, project(':framework').sourceSets.main.allJava,
+            project(':dataflow').sourceSets.main.allJava, project(':javacutil').sourceSets.main.allJava)
+}
+
+task allJavadocJar(type: Jar) {
+    description 'Creates javadoc jar include Javadoc for all of the framework'
+    dependsOn rootProject.tasks.allJavadoc
+    destinationDirectory = file("${projectDir}/dist")
+    archiveFileName = "checker-javadoc.jar"
+    from rootProject.tasks.allJavadoc.destinationDir
+}
+
+
 shadowJar {
     description 'Creates the "fat" checker.jar in dist/.'
-    destinationDir = file("${projectDir}/dist")
-    archiveName = "checker.jar"
+    destinationDirectory = file("${projectDir}/dist")
+    archiveFileName = "checker.jar"
     // To see what files are incorporated into the shadow jar file:
     // doFirst { println sourceSets.main.runtimeClasspath.asPath }
 }
 artifacts {
+    // Don't add this here or else the Javadoc and the sources jar is built during the assemble task.
+    // archives allJavadocJar
+    // archives allSourcesJar
     archives shadowJar
 }
 
 clean {
+    dependsOn cleanJdk
     delete "${projectDir}/dist"
 }
 
@@ -209,27 +306,69 @@ task exampleTests(type: Exec, dependsOn: copyJarsToDist, group: 'Verification') 
 task demosTests(dependsOn: copyJarsToDist, group: 'Verification') {
     description 'Test that the demos are working as expected.'
     doLast {
-        File demosDir = new File(projectDir, '../../checker-framework-demos');
-        if (!demosDir.exists()) {
-            exec {
-                workingDir file(demosDir.toString() + '/../')
-                executable 'git'
-                args = ['clone', 'https://github.com/typetools/checker-framework.demos.git', 'checker-framework-demos']
+        if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+            File demosDir = new File(projectDir, '../../checker-framework.demos');
+            if (!demosDir.exists()) {
+                exec {
+                    workingDir file(demosDir.toString() + '/../')
+                    executable 'git'
+                    args = ['clone', 'https://github.com/typetools/checker-framework.demos.git']
+                }
+            } else {
+                exec {
+                    workingDir demosDir
+                    executable 'git'
+                    args = ['pull', 'https://github.com/typetools/checker-framework.demos.git']
+                    ignoreExitValue = true
+                }
             }
+            ant.properties.put('checker.lib', file("${projectDir}/dist/checker.jar").absolutePath)
+            ant.ant(dir: demosDir.toString())
         } else {
-            exec {
-                workingDir demosDir
-                executable 'git'
-                args = ['pull', 'https://github.com/typetools/checker-framework.demos.git']
-                ignoreExitValue = true
-            }
+            println("Skipping demosTests because they only work with Java 8.")
         }
-        ant.properties.put('checker.lib', file("${projectDir}/dist/checker.jar").absolutePath)
-        ant.ant(dir: demosDir.toString())
     }
 }
 
 task allNullnessTests(type: Test, group: 'Verification') {
     description 'Run all Junit tests for the Nullness Checker.'
     include '**/Nullness*.class'
+}
+
+// These are tests that should only be run with JDK 11.
+task jtregJdk11Tests(dependsOn: ':downloadJtreg', group: 'Verification') {
+    description 'Run the jtreg tests made for JDK 11.'
+    dependsOn('compileJava')
+    dependsOn('compileTestJava')
+    dependsOn(':checker:updateJdk')
+    dependsOn('shadowJar')
+
+    String jtregOutput = "${buildDir}/jtregJdk11"
+    String name = 'all'
+    doLast {
+        if(isJava8) {
+            println "This test is only run with JDK 11."
+            return;
+        }
+        exec {
+            executable "${jtregHome}/bin/jtreg"
+            args = [
+                    "-dir:${projectDir}/jtregJdk11",
+                    "-workDir:${jtregOutput}/${name}/work",
+                    "-reportDir:${jtregOutput}/${name}/report",
+                    "-verbose:summary",
+                    "-javacoptions:-g",
+                    "-keywords:!ignore",
+                    "-samevm",
+                    "-javacoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
+                    "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
+                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                    "-javacoptions:-classpath ${sourceSets.testannotations.output.asPath}",
+                    // Location of jtreg tests
+                    '.'
+            ]
+        }
+
+
+    }
 }
